나이대별 성적 변수 추가

--- a/Feature_Engineering.ipynb
+++ b/Feature_Engineering.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNaWxIQ8rN+amW77Nb/PJy2",
+      "authorship_tag": "ABX9TyOD1+hM4Ltl+sdjAYfMVb83",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,12 +23,12 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/gmb408/OSSP-KBO-prediction/blob/version-0.1/Feature_Engineering.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/gmb408/OSSP-KBO-prediction/blob/main/Feature_Engineering.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "id": "tXwo_RcAsdKv"
       },
@@ -52,7 +52,7 @@
       "metadata": {
         "id": "ry1h0-qHsllG"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -64,7 +64,7 @@
       "metadata": {
         "id": "9OdNwkMssln7"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -78,7 +78,27 @@
       "metadata": {
         "id": "qlM89yQAslqn"
       },
-      "execution_count": null,
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def get_agelative(player_age,stat=stats ,df=result):\n",
+        "    try:\n",
+        "        result_cum = df[(df['나이']==player_age)][stat]\n",
+        "        result_cum = result_cum.mean()\n",
+        "        \n",
+        "    except:\n",
+        "        result_cum = [np.nan for i in stat]\n",
+        "        result_cum = pd.Series(result_cum)\n",
+        "    \n",
+        "    return result_cum\n"
+      ],
+      "metadata": {
+        "id": "QSjO1sOPHED_"
+      },
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -99,31 +119,34 @@
       "metadata": {
         "id": "y0uoN1BLsltD"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# 모든 stats에 대한 누적 stat\n",
-        "stats_cum = [i + '_누적' for i in stats]"
+        "# 모든 stats에 대한 누적 stat 나이별 스텟\n",
+        "stats_cum = [i + '_누적' for i in stats]\n",
+        "stats_age = [i + '_AGE' for i in stats]"
       ],
       "metadata": {
         "id": "LFLA8oD7slvv"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# 누적 stat 데이터프레임에 반영\n",
-        "result[stats_cum] = result.apply(lambda x: get_cumulative(x['ID'], x['시즌']), axis=1)"
+        "result[stats_cum] = result.apply(lambda x: get_cumulative(x['ID'], x['시즌']), axis=1)\n",
+        "\n",
+        "result[stats_age] = result.apply(lambda x: get_agelative(x['나이']), axis=1)"
       ],
       "metadata": {
         "id": "iORllxFps0mc"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -144,7 +167,7 @@
       "metadata": {
         "id": "dDkKUTU3slyH"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -158,7 +181,7 @@
       "metadata": {
         "id": "HCOVgL1Ms6MK"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -170,7 +193,7 @@
       "metadata": {
         "id": "VfR1avl9s6O-"
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -182,7 +205,7 @@
       "metadata": {
         "id": "aJVisN7gs6Rs"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -194,7 +217,7 @@
       "metadata": {
         "id": "EmOZZkRts6UY"
       },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -216,7 +239,7 @@
       "metadata": {
         "id": "CjkWXUpLs6W_"
       },
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -229,7 +252,7 @@
       "metadata": {
         "id": "zpFkaf7ks6Zs"
       },
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -245,58 +268,58 @@
           "base_uri": "https://localhost:8080/",
           "height": 870
         },
-        "outputId": "e0867863-8ebe-4ea8-8309-a2203c5835e8"
+        "outputId": "69008bcf-fe06-40ee-886d-8e4f501e1c91"
       },
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "        ID   이름          생일  팀    시즌 포지션        나이         G     타석        타수  \\\n",
-              "0        0  이종범  1970-08-15  해  1994  SS -0.972904  1.164774  561.0  1.820499   \n",
-              "1        1  테임즈  1986-11-10  N  2015  1B  0.177011  1.722593  595.0  1.629513   \n",
-              "2        2  심정수  1975-05-05  현  2003  RF -0.052972  1.443684  601.0  1.544630   \n",
-              "3        0  이종범  1970-08-15  해  1997  SS -0.282955  1.195764  577.0  1.714395   \n",
-              "4        0  이종범  1970-08-15  해  1996  SS -0.512938  0.823885  525.0  1.466822   \n",
-              "...    ...  ...         ... ..   ...  ..       ...       ...    ...       ...   \n",
-              "5791  2192  임종찬  2001-09-28  한  2021  RF -1.892835 -1.376400  146.0 -0.775491   \n",
-              "5792  1845  박찬호  1995-06-05  K  2020  SS -0.742921  1.691603  530.0  1.679028   \n",
-              "5793  1998  정보근  1999-08-31  롯  2020   C -1.662853 -0.043833  152.0 -0.768418   \n",
-              "5794  1808  나종덕  1998-03-16  롯  2019   C -1.662853  0.544976  209.0 -0.400594   \n",
-              "5795   358  김헌곤  1988-11-09  삼  2022  CF  1.326925 -0.198783  239.0 -0.124725   \n",
+              "        ID   이름          생일  팀    시즌 포지션  나이      G     타석     타수  ...  \\\n",
+              "0        0  이종범  1970-08-15  해  1994  SS  25  124.0  561.0  499.0  ...   \n",
+              "1        1  테임즈  1986-11-10  N  2015  1B  30  142.0  595.0  472.0  ...   \n",
+              "2        2  심정수  1975-05-05  현  2003  RF  29  133.0  601.0  460.0  ...   \n",
+              "3        0  이종범  1970-08-15  해  1997  SS  28  125.0  577.0  484.0  ...   \n",
+              "4        0  이종범  1970-08-15  해  1996  SS  27  113.0  525.0  449.0  ...   \n",
+              "...    ...  ...         ... ..   ...  ..  ..    ...    ...    ...  ...   \n",
+              "5791  2192  임종찬  2001-09-28  한  2021  RF  21   42.0  146.0  132.0  ...   \n",
+              "5792  1845  박찬호  1995-06-05  K  2020  SS  26  141.0  530.0  479.0  ...   \n",
+              "5793  1998  정보근  1999-08-31  롯  2020   C  22   85.0  152.0  133.0  ...   \n",
+              "5794  1808  나종덕  1998-03-16  롯  2019   C  22  104.0  209.0  185.0  ...   \n",
+              "5795   358  김헌곤  1988-11-09  삼  2022  CF  35   80.0  239.0  224.0  ...   \n",
               "\n",
-              "      ...  타율_LAG3  출루_LAG3  장타_LAG3  OPS_LAG3  wOBA_LAG3  wRC+_LAG3  \\\n",
-              "0     ...      NaN      NaN      NaN       NaN        NaN        NaN   \n",
-              "1     ...      NaN      NaN      NaN       NaN        NaN        NaN   \n",
-              "2     ...    0.304    0.400    0.551     0.951      0.413      149.9   \n",
-              "3     ...    0.393    0.452    0.581     1.033      0.462      198.3   \n",
-              "4     ...    0.280    0.331    0.432     0.762      0.350      127.4   \n",
-              "...   ...      ...      ...      ...       ...        ...        ...   \n",
-              "5791  ...      NaN      NaN      NaN       NaN        NaN        NaN   \n",
-              "5792  ...      NaN      NaN      NaN       NaN        NaN        NaN   \n",
-              "5793  ...      NaN      NaN      NaN       NaN        NaN        NaN   \n",
-              "5794  ...      NaN      NaN      NaN       NaN        NaN        NaN   \n",
-              "5795  ...    0.297    0.362    0.387     0.748      0.346      107.6   \n",
+              "      타율_LAG3  출루_LAG3  장타_LAG3  OPS_LAG3  wOBA_LAG3  wRC+_LAG3  WAR+_LAG3  \\\n",
+              "0         NaN      NaN      NaN       NaN        NaN        NaN        NaN   \n",
+              "1         NaN      NaN      NaN       NaN        NaN        NaN        NaN   \n",
+              "2       0.304    0.400    0.551     0.951      0.413      149.9       5.31   \n",
+              "3       0.393    0.452    0.581     1.033      0.462      198.3      11.77   \n",
+              "4       0.280    0.331    0.432     0.762      0.350      127.4       6.14   \n",
+              "...       ...      ...      ...       ...        ...        ...        ...   \n",
+              "5791      NaN      NaN      NaN       NaN        NaN        NaN        NaN   \n",
+              "5792      NaN      NaN      NaN       NaN        NaN        NaN        NaN   \n",
+              "5793      NaN      NaN      NaN       NaN        NaN        NaN        NaN   \n",
+              "5794      NaN      NaN      NaN       NaN        NaN        NaN        NaN   \n",
+              "5795    0.297    0.362    0.387     0.748      0.346      107.6       1.68   \n",
               "\n",
-              "      WAR+_LAG3  장타_NEXT  출루_NEXT  OPS_NEXT  \n",
-              "0           NaN    0.586    0.397     0.983  \n",
-              "1           NaN    0.679    0.427     1.106  \n",
-              "2          5.31    0.480    0.385     0.864  \n",
-              "3         11.77      NaN      NaN       NaN  \n",
-              "4          6.14    0.581    0.428     1.009  \n",
-              "...         ...      ...      ...       ...  \n",
-              "5791        NaN    0.321    0.228     0.549  \n",
-              "5792        NaN    0.313    0.331     0.644  \n",
-              "5793        NaN      NaN      NaN       NaN  \n",
-              "5794        NaN      NaN      NaN       NaN  \n",
-              "5795       1.68      NaN      NaN       NaN  \n",
+              "      장타_NEXT  출루_NEXT  OPS_NEXT  \n",
+              "0       0.586    0.397     0.983  \n",
+              "1       0.679    0.427     1.106  \n",
+              "2       0.480    0.385     0.864  \n",
+              "3         NaN      NaN       NaN  \n",
+              "4       0.581    0.428     1.009  \n",
+              "...       ...      ...       ...  \n",
+              "5791    0.321    0.228     0.549  \n",
+              "5792    0.313    0.331     0.644  \n",
+              "5793      NaN      NaN       NaN  \n",
+              "5794      NaN      NaN       NaN  \n",
+              "5795      NaN      NaN       NaN  \n",
               "\n",
-              "[5796 rows x 141 columns]"
+              "[5796 rows x 167 columns]"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-a4b7ab59-920c-4723-a5c4-81e7ee5b9d78\">\n",
+              "  <div id=\"df-dcb1b585-3636-49ae-9a0f-67e71d43d241\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -348,10 +371,10 @@
               "      <td>해</td>\n",
               "      <td>1994</td>\n",
               "      <td>SS</td>\n",
-              "      <td>-0.972904</td>\n",
-              "      <td>1.164774</td>\n",
+              "      <td>25</td>\n",
+              "      <td>124.0</td>\n",
               "      <td>561.0</td>\n",
-              "      <td>1.820499</td>\n",
+              "      <td>499.0</td>\n",
               "      <td>...</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
@@ -372,10 +395,10 @@
               "      <td>N</td>\n",
               "      <td>2015</td>\n",
               "      <td>1B</td>\n",
-              "      <td>0.177011</td>\n",
-              "      <td>1.722593</td>\n",
+              "      <td>30</td>\n",
+              "      <td>142.0</td>\n",
               "      <td>595.0</td>\n",
-              "      <td>1.629513</td>\n",
+              "      <td>472.0</td>\n",
               "      <td>...</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
@@ -396,10 +419,10 @@
               "      <td>현</td>\n",
               "      <td>2003</td>\n",
               "      <td>RF</td>\n",
-              "      <td>-0.052972</td>\n",
-              "      <td>1.443684</td>\n",
+              "      <td>29</td>\n",
+              "      <td>133.0</td>\n",
               "      <td>601.0</td>\n",
-              "      <td>1.544630</td>\n",
+              "      <td>460.0</td>\n",
               "      <td>...</td>\n",
               "      <td>0.304</td>\n",
               "      <td>0.400</td>\n",
@@ -420,10 +443,10 @@
               "      <td>해</td>\n",
               "      <td>1997</td>\n",
               "      <td>SS</td>\n",
-              "      <td>-0.282955</td>\n",
-              "      <td>1.195764</td>\n",
+              "      <td>28</td>\n",
+              "      <td>125.0</td>\n",
               "      <td>577.0</td>\n",
-              "      <td>1.714395</td>\n",
+              "      <td>484.0</td>\n",
               "      <td>...</td>\n",
               "      <td>0.393</td>\n",
               "      <td>0.452</td>\n",
@@ -444,10 +467,10 @@
               "      <td>해</td>\n",
               "      <td>1996</td>\n",
               "      <td>SS</td>\n",
-              "      <td>-0.512938</td>\n",
-              "      <td>0.823885</td>\n",
+              "      <td>27</td>\n",
+              "      <td>113.0</td>\n",
               "      <td>525.0</td>\n",
-              "      <td>1.466822</td>\n",
+              "      <td>449.0</td>\n",
               "      <td>...</td>\n",
               "      <td>0.280</td>\n",
               "      <td>0.331</td>\n",
@@ -492,10 +515,10 @@
               "      <td>한</td>\n",
               "      <td>2021</td>\n",
               "      <td>RF</td>\n",
-              "      <td>-1.892835</td>\n",
-              "      <td>-1.376400</td>\n",
+              "      <td>21</td>\n",
+              "      <td>42.0</td>\n",
               "      <td>146.0</td>\n",
-              "      <td>-0.775491</td>\n",
+              "      <td>132.0</td>\n",
               "      <td>...</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
@@ -516,10 +539,10 @@
               "      <td>K</td>\n",
               "      <td>2020</td>\n",
               "      <td>SS</td>\n",
-              "      <td>-0.742921</td>\n",
-              "      <td>1.691603</td>\n",
+              "      <td>26</td>\n",
+              "      <td>141.0</td>\n",
               "      <td>530.0</td>\n",
-              "      <td>1.679028</td>\n",
+              "      <td>479.0</td>\n",
               "      <td>...</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
@@ -540,10 +563,10 @@
               "      <td>롯</td>\n",
               "      <td>2020</td>\n",
               "      <td>C</td>\n",
-              "      <td>-1.662853</td>\n",
-              "      <td>-0.043833</td>\n",
+              "      <td>22</td>\n",
+              "      <td>85.0</td>\n",
               "      <td>152.0</td>\n",
-              "      <td>-0.768418</td>\n",
+              "      <td>133.0</td>\n",
               "      <td>...</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
@@ -564,10 +587,10 @@
               "      <td>롯</td>\n",
               "      <td>2019</td>\n",
               "      <td>C</td>\n",
-              "      <td>-1.662853</td>\n",
-              "      <td>0.544976</td>\n",
+              "      <td>22</td>\n",
+              "      <td>104.0</td>\n",
               "      <td>209.0</td>\n",
-              "      <td>-0.400594</td>\n",
+              "      <td>185.0</td>\n",
               "      <td>...</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
@@ -588,10 +611,10 @@
               "      <td>삼</td>\n",
               "      <td>2022</td>\n",
               "      <td>CF</td>\n",
-              "      <td>1.326925</td>\n",
-              "      <td>-0.198783</td>\n",
+              "      <td>35</td>\n",
+              "      <td>80.0</td>\n",
               "      <td>239.0</td>\n",
-              "      <td>-0.124725</td>\n",
+              "      <td>224.0</td>\n",
               "      <td>...</td>\n",
               "      <td>0.297</td>\n",
               "      <td>0.362</td>\n",
@@ -606,9 +629,9 @@
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>5796 rows × 141 columns</p>\n",
+              "<p>5796 rows × 167 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a4b7ab59-920c-4723-a5c4-81e7ee5b9d78')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-dcb1b585-3636-49ae-9a0f-67e71d43d241')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -659,12 +682,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-a4b7ab59-920c-4723-a5c4-81e7ee5b9d78 button.colab-df-convert');\n",
+              "          document.querySelector('#df-dcb1b585-3636-49ae-9a0f-67e71d43d241 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-a4b7ab59-920c-4723-a5c4-81e7ee5b9d78');\n",
+              "          const element = document.querySelector('#df-dcb1b585-3636-49ae-9a0f-67e71d43d241');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -687,7 +710,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 29
         }
       ]
     }
