--- a/Data_preprocessing.ipynb
+++ b/Data_preprocessing.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNWqwcfRD/S22wnhkvpqyWP",
+      "authorship_tag": "ABX9TyPmub7bINni3Y7qENXngzXt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/gmb408/OSSP-KBO-prediction/blob/version-0.1/Data_preprocessing.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/gmb408/OSSP-KBO-prediction/blob/main/Data_preprocessing.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -40,7 +40,7 @@
       "metadata": {
         "id": "kPR0hi_0o7ZL"
       },
-      "execution_count": 31,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -53,7 +53,7 @@
       "metadata": {
         "id": "7NYCZY3opUDf"
       },
-      "execution_count": 32,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -65,7 +65,7 @@
       "metadata": {
         "id": "7vtlQbG94Qdn"
       },
-      "execution_count": 33,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -77,7 +77,7 @@
       "metadata": {
         "id": "6kG6HcYa41yr"
       },
-      "execution_count": 34,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -91,7 +91,7 @@
       "metadata": {
         "id": "nhj7fdL8pUGD"
       },
-      "execution_count": 35,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -109,7 +109,7 @@
       "metadata": {
         "id": "kAJl48r1pUIb"
       },
-      "execution_count": 36,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -130,7 +130,7 @@
       "metadata": {
         "id": "Z7uX0omUpULD"
       },
-      "execution_count": 37,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -143,7 +143,7 @@
       "metadata": {
         "id": "UGU37x3vpUNT"
       },
-      "execution_count": 38,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -161,7 +161,7 @@
       "metadata": {
         "id": "GfVf4Ns3pnFX"
       },
-      "execution_count": 39,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -174,7 +174,7 @@
       "metadata": {
         "id": "Nosu2m8spnM4"
       },
-      "execution_count": 40,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -187,19 +187,7 @@
       "metadata": {
         "id": "6EfD6BrZpnPe"
       },
-      "execution_count": 41,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# 타석 50 미만의 선수 제거 적은 표본으로 이상치및 결측치 제거\n",
-        "result.drop(result.loc[result['타석']<50].index, inplace=True)"
-      ],
-      "metadata": {
-        "id": "kGOoVzgtCUUk"
-      },
-      "execution_count": 42,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -211,7 +199,7 @@
       "metadata": {
         "id": "cHTKeUbSD7Lm"
       },
-      "execution_count": 43,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -227,45 +215,45 @@
           "base_uri": "https://localhost:8080/",
           "height": 424
         },
-        "outputId": "a2878a13-5138-4e34-a374-48f59970612c"
+        "outputId": "98e974b1-1c8a-4f7e-85b5-1d9543477de8"
       },
-      "execution_count": 44,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "        ID   이름          생일  팀    시즌 포지션  나이      G     타석     타수  ...    병살  \\\n",
-              "0        0  이종범  1970-08-15  해  1994  SS  25  124.0  561.0  499.0  ...   2.0   \n",
-              "1        1  테임즈  1986-11-10  N  2015  1B  30  142.0  595.0  472.0  ...   7.0   \n",
-              "2        2  심정수  1975-05-05  현  2003  RF  29  133.0  601.0  460.0  ...  14.0   \n",
-              "3        0  이종범  1970-08-15  해  1997  SS  28  125.0  577.0  484.0  ...   9.0   \n",
-              "4        0  이종범  1970-08-15  해  1996  SS  27  113.0  525.0  449.0  ...   4.0   \n",
-              "...    ...  ...         ... ..   ...  ..  ..    ...    ...    ...  ...   ...   \n",
-              "5791  2192  임종찬  2001-09-28  한  2021  RF  21   42.0  146.0  132.0  ...   2.0   \n",
-              "5792  1845  박찬호  1995-06-05  K  2020  SS  26  141.0  530.0  479.0  ...  14.0   \n",
-              "5793  1998  정보근  1999-08-31  롯  2020   C  22   85.0  152.0  133.0  ...   7.0   \n",
-              "5794  1808  나종덕  1998-03-16  롯  2019   C  22  104.0  209.0  185.0  ...   5.0   \n",
-              "5795   358  김헌곤  1988-11-09  삼  2022  CF  35   80.0  239.0  224.0  ...  10.0   \n",
+              "         ID   이름          생일  팀    시즌 포지션  나이      G     타석     타수  ...    병살  \\\n",
+              "0         0  이종범  1970-08-15  해  1994  SS  25  124.0  561.0  499.0  ...   2.0   \n",
+              "1         1  테임즈  1986-11-10  N  2015  1B  30  142.0  595.0  472.0  ...   7.0   \n",
+              "2         2  심정수  1975-05-05  현  2003  RF  29  133.0  601.0  460.0  ...  14.0   \n",
+              "3         0  이종범  1970-08-15  해  1997  SS  28  125.0  577.0  484.0  ...   9.0   \n",
+              "4         0  이종범  1970-08-15  해  1996  SS  27  113.0  525.0  449.0  ...   4.0   \n",
+              "...     ...  ...         ... ..   ...  ..  ..    ...    ...    ...  ...   ...   \n",
+              "10032  2197  임종찬  2001-09-28  한  2021  RF  21   42.0  146.0  132.0  ...   2.0   \n",
+              "10033  1850  박찬호  1995-06-05  K  2020  SS  26  141.0  530.0  479.0  ...  14.0   \n",
+              "10034  2004  정보근  1999-08-31  롯  2020   C  22   85.0  152.0  133.0  ...   7.0   \n",
+              "10035  1813  나종덕  1998-03-16  롯  2019   C  22  104.0  209.0  185.0  ...   5.0   \n",
+              "10036   358  김헌곤  1988-11-09  삼  2022  CF  35   80.0  239.0  224.0  ...  10.0   \n",
               "\n",
-              "        희타   희비     타율     출루     장타    OPS   wOBA   wRC+   WAR+  \n",
-              "0      1.0  4.0  0.393  0.452  0.581  1.033  0.462  198.3  11.77  \n",
-              "1      0.0  7.0  0.381  0.498  0.790  1.288  0.530  222.3  10.71  \n",
-              "2      0.0  8.0  0.335  0.478  0.720  1.197  0.498  210.7  10.19  \n",
-              "3      0.0  3.0  0.324  0.428  0.581  1.009  0.431  173.2   9.70  \n",
-              "4      0.0  2.0  0.332  0.425  0.566  0.991  0.440  184.6   9.52  \n",
-              "...    ...  ...    ...    ...    ...    ...    ...    ...    ...  \n",
-              "5791   1.0  0.0  0.152  0.228  0.212  0.440  0.217   18.7  -1.06  \n",
-              "5792  12.0  3.0  0.221  0.274  0.273  0.548  0.254   40.2  -1.14  \n",
-              "5793   6.0  1.0  0.150  0.219  0.165  0.385  0.187   -3.9  -1.19  \n",
-              "5794   7.0  2.0  0.124  0.188  0.195  0.383  0.180   -4.2  -1.41  \n",
-              "5795   2.0  3.0  0.192  0.224  0.241  0.465  0.217   24.6  -1.58  \n",
+              "         희타   희비     타율     출루     장타    OPS   wOBA   wRC+   WAR+  \n",
+              "0       1.0  4.0  0.393  0.452  0.581  1.033  0.462  198.3  11.77  \n",
+              "1       0.0  7.0  0.381  0.498  0.790  1.288  0.530  222.3  10.71  \n",
+              "2       0.0  8.0  0.335  0.478  0.720  1.197  0.498  210.7  10.19  \n",
+              "3       0.0  3.0  0.324  0.428  0.581  1.009  0.431  173.2   9.70  \n",
+              "4       0.0  2.0  0.332  0.425  0.566  0.991  0.440  184.6   9.52  \n",
+              "...     ...  ...    ...    ...    ...    ...    ...    ...    ...  \n",
+              "10032   1.0  0.0  0.152  0.228  0.212  0.440  0.217   18.7  -1.06  \n",
+              "10033  12.0  3.0  0.221  0.274  0.273  0.548  0.254   40.2  -1.14  \n",
+              "10034   6.0  1.0  0.150  0.219  0.165  0.385  0.187   -3.9  -1.19  \n",
+              "10035   7.0  2.0  0.124  0.188  0.195  0.383  0.180   -4.2  -1.41  \n",
+              "10036   2.0  3.0  0.192  0.224  0.241  0.465  0.217   24.6  -1.58  \n",
               "\n",
-              "[5796 rows x 33 columns]"
+              "[10037 rows x 33 columns]"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-4cd57f5c-c345-4597-ad7d-adeb20f32690\">\n",
+              "  <div id=\"df-ad09f7da-1151-4921-93c2-9b8ce5ce0aea\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -454,8 +442,8 @@
               "      <td>...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>5791</th>\n",
-              "      <td>2192</td>\n",
+              "      <th>10032</th>\n",
+              "      <td>2197</td>\n",
               "      <td>임종찬</td>\n",
               "      <td>2001-09-28</td>\n",
               "      <td>한</td>\n",
@@ -478,8 +466,8 @@
               "      <td>-1.06</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>5792</th>\n",
-              "      <td>1845</td>\n",
+              "      <th>10033</th>\n",
+              "      <td>1850</td>\n",
               "      <td>박찬호</td>\n",
               "      <td>1995-06-05</td>\n",
               "      <td>K</td>\n",
@@ -502,8 +490,8 @@
               "      <td>-1.14</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>5793</th>\n",
-              "      <td>1998</td>\n",
+              "      <th>10034</th>\n",
+              "      <td>2004</td>\n",
               "      <td>정보근</td>\n",
               "      <td>1999-08-31</td>\n",
               "      <td>롯</td>\n",
@@ -526,8 +514,8 @@
               "      <td>-1.19</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>5794</th>\n",
-              "      <td>1808</td>\n",
+              "      <th>10035</th>\n",
+              "      <td>1813</td>\n",
               "      <td>나종덕</td>\n",
               "      <td>1998-03-16</td>\n",
               "      <td>롯</td>\n",
@@ -550,7 +538,7 @@
               "      <td>-1.41</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>5795</th>\n",
+              "      <th>10036</th>\n",
               "      <td>358</td>\n",
               "      <td>김헌곤</td>\n",
               "      <td>1988-11-09</td>\n",
@@ -575,9 +563,9 @@
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>5796 rows × 33 columns</p>\n",
+              "<p>10037 rows × 33 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4cd57f5c-c345-4597-ad7d-adeb20f32690')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ad09f7da-1151-4921-93c2-9b8ce5ce0aea')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -628,12 +616,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-4cd57f5c-c345-4597-ad7d-adeb20f32690 button.colab-df-convert');\n",
+              "          document.querySelector('#df-ad09f7da-1151-4921-93c2-9b8ce5ce0aea button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-4cd57f5c-c345-4597-ad7d-adeb20f32690');\n",
+              "          const element = document.querySelector('#df-ad09f7da-1151-4921-93c2-9b8ce5ce0aea');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -656,7 +644,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 44
+          "execution_count": 13
         }
       ]
     }
